Update azure-pipeline-ms-win.yml for Azure Pipelines

--- a/azure-pipeline-ms-win.yml
+++ b/azure-pipeline-ms-win.yml
@@ -31,11 +31,11 @@ stages:
               customCommand: "run build"
             displayName: "Build Angular app"
 
-          - task: Npm@1
-            inputs:
-              command: custom
-              customCommand: "run test"
-            displayName: "Test Angular app"
+          # - task: Npm@1
+          #   inputs:
+          #     command: custom
+          #     customCommand: "run test"
+          #   displayName: "Test Angular app"
 
           - task: Npm@1
             inputs:
