--- a/azure-pipeline-ms-win.yml
+++ b/azure-pipeline-ms-win.yml
@@ -20,6 +20,7 @@ stages:
               script: |
                 node -v
                 npm -v
+            continueOnError: true    
           - task: NodeTool@0
             inputs:
               versionSpec: "16.x"
