Update azure-pipeline-ms-win.yml for Azure Pipelines

--- a/azure-pipeline-ms-win.yml
+++ b/azure-pipeline-ms-win.yml
@@ -15,58 +15,61 @@ pool: 'self-hosted-machine'
 #         workspace:
 #           clean: all
 steps:
-  # - task: CmdLine@2
-  #   inputs:
-  #     script: |
-  #       node -v
-  #       npm -v
-  #   continueOnError: true  
+  - task: CmdLine@2
+    inputs:
+      script: |
+        git 
+        git -v
+        node -v
+        npm -v
+    continueOnError: true  
   # - task: PowerShell@2
   #   inputs:
   #     targetType: 'inline'
   #     script: |
   #       node -v
   #       npm -v
-  - task: NodeTool@0
-    inputs:
-      versionSpec: "16.x"
-    displayName: "Install Node.js"
+  # - task: NodeTool@0
+  #   inputs:
+  #     versionSpec: "16.x"
+  #   displayName: "Install Node.js"
 
-  - task: Npm@1
-    inputs:
-      command: "install"
-    displayName: "Npm Install"
-
-  - task: Npm@1
-    inputs:
-      command: custom
-      customCommand: "run build"
-    displayName: "Build Angular app"
+  # - task: Npm@1
+  #   inputs:
+  #     command: "install"
+  #   displayName: "Npm Install"
 
   # - task: Npm@1
   #   inputs:
   #     command: custom
-  #     customCommand: "run test"
-  #   displayName: "Test Angular app"
+  #     customCommand: "run build"
+  #   displayName: "Build Angular app"
 
-  - task: Npm@1
-    inputs:
-      command: custom
-      customCommand: "run lint"
-    displayName: "Lint Angular app"
+  # # - task: Npm@1
+  # #   inputs:
+  # #     command: custom
+  # #     customCommand: "run test"
+  # #   displayName: "Test Angular app"
 
-  - script: |
-      mkdir $(Build.ArtifactStagingDirectory)\\dist
-      xcopy "dist\\sample-app" $(Build.ArtifactStagingDirectory)\\dist /E/H/C
-    displayName: Copy dist contents
+  # - task: Npm@1
+  #   inputs:
+  #     command: custom
+  #     customCommand: "run lint"
+  #   displayName: "Lint Angular app"
 
-  - task: PublishBuildArtifacts@1
-    displayName: "Publish Artifact"
-  - task: CmdLine@2
-    inputs:
-      script: |
-        node -v
-        npm -v
+  # - script: |
+  #     mkdir $(Build.ArtifactStagingDirectory)\\dist
+  #     xcopy "dist\\sample-app" $(Build.ArtifactStagingDirectory)\\dist /E/H/C
+  #   displayName: Copy dist contents
+
+  # - task: PublishBuildArtifacts@1
+  #   displayName: "Publish Artifact"
+  # - task: CmdLine@2
+  #   inputs:
+  #     script: |
+  #       node -v
+  #       npm -v
+
   # - stage: Deploy
   #   dependsOn: Build
   #   condition: succeeded('Build')
