--- a/azure-pipeline-ms-win.yml
+++ b/azure-pipeline-ms-win.yml
@@ -15,16 +15,16 @@ pool: 'self-hosted-machine'
 #         workspace:
 #           clean: all
 steps:
-  - task: CmdLine@2
-    inputs:
-      script: |
-        dir
-        echo "$(Build.SourcesDirectory)"
-          # git 
-          # git -v
-          # node -v
-          # npm -v
-    continueOnError: true  
+  # - task: CmdLine@2
+  #   inputs:
+  #     script: |
+  #       echo "dir"
+  #       echo "$(Build.SourcesDirectory)"
+  #       git 
+  #       git -v
+  #       node -v
+  #       npm -v
+  #   continueOnError: true  
   - task: PowerShell@2
     inputs:
       targetType: 'inline'
