Update azure-pipeline-ms-win.yml for Azure Pipelines

--- a/azure-pipeline-ms-win.yml
+++ b/azure-pipeline-ms-win.yml
@@ -1,6 +1,6 @@
 trigger: none
 
-pool: 'self-hosted-machine'
+pool: 'self-hosted-agent-win'
 # stages:
 #   - stage: Build
 #     pool: 'self-hosted-machine'
