--- a/azure-pipeline-ms-win.yml
+++ b/azure-pipeline-ms-win.yml
@@ -15,7 +15,11 @@ steps:
       targetType: 'inline'
       script: |
         node -v
-        npm -v
+        npm -v 
+  - task: NodeTool@0
+    inputs:
+      versionSpec: "16.x"
+    displayName: "Install Node.js"       
   - task: Npm@1
     inputs:
       command: "install"
