--- a/azure-pipeline-ms-win.yml
+++ b/azure-pipeline-ms-win.yml
@@ -10,6 +10,12 @@ pool: 'self-hosted-agent-win'
 #         workspace:
 #           clean: all
 steps:  
+  - task: Cache@2
+    displayName: 'cache for frontend'
+    inputs:
+      key: $(Build.SourcesDirectory)/frontend/package-lock.json
+      path: '$(front_end_cache)'
+      cacheHitVar: 'CACHE_RESTORED'
   - task: PowerShell@2
     inputs:
       targetType: 'inline'
@@ -23,11 +29,13 @@ steps:
   - task: Npm@1
     inputs:
       command: "install"
+      workingDir: '$(front_end_cache)'
     displayName: "Npm Install"
   - task: Npm@1
     inputs:
       command: custom
       customCommand: "run build"
+      workingDir: '$(front_end_cache)'
     displayName: "Build Angular app"
   # - task: Npm@1
   #   inputs:
@@ -38,6 +46,7 @@ steps:
     inputs:
       command: custom
       customCommand: "run lint"
+      workingDir: '$(front_end_cache)'
     displayName: "Lint Angular app"
   - task: CopyFiles@2
     inputs:
