--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,7 +1,8 @@
 on:
   push:
-    branches:
-    - none
+    branches: none
+      # - main
+  workflow_dispatch:
 env:
   front_end_cache: ${{ github.workspace }}
 jobs:
