--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -29,17 +29,19 @@ jobs:
       run: npm run lint ${{ env.front_end_cache }}
     - run: |
         dir
+        cd dist
+        dir
         node -v
         npm -v
       shell: cmd  
-    - name: Copy dist contents
-      run: |
-        mkdir ${GITHUB_WORKSPACE}/dist
-        xcopy "dist/sample-app" ${GITHUB_WORKSPACE}/dist /E/H/C      
-    - name: Publish Artifact 
-      uses: actions/upload-artifact@v2
-      with:
-        path: ${GITHUB_WORKSPACE}\\dist
-        name: DemoApplication
+#     - name: Copy dist contents
+#       run: |
+#         mkdir ${GITHUB_WORKSPACE}/dist
+#         xcopy "dist/sample-app" ${GITHUB_WORKSPACE}/dist /E/H/C      
+#     - name: Publish Artifact 
+#       uses: actions/upload-artifact@v2
+#       with:
+#         path: ${GITHUB_WORKSPACE}\\dist
+#         name: DemoApplication
 
                     
