--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -29,7 +29,7 @@ jobs:
       run: npm run lint ${{ env.front_end_cache }}
     - run: |
         dir
-        cd dist
+        cd dist/sample-app
         dir
         node -v
         npm -v
